Update Email and SMTP

--- a/MEGUWebMVC/appsettings.json
+++ b/MEGUWebMVC/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MyConnection": "Host=ep-red-cherry-a2k5x61p-pooler.eu-central-1.aws.neon.tech;Database=Test;Username=Test_owner;Password=npg_jbwDn0uVkyA7"
+    "MyConnection": "Host=ep-withered-field-agvl4hbq-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_mz0L3KGjbwNc;"
   },
   "ImagesDir": "images",
   "ImageSizes": [
